got started on the combustiongenerator multiblock, added some textures

--- a/src/main/resources/assets/eflux/lang/en_US.lang
+++ b/src/main/resources/assets/eflux/lang/en_US.lang
@@ -1,4 +1,5 @@
-tile.generatorCombust.name=Combustion Generator
+tile.generatorCombust.name=Combustion Generator Control
+tile.generatorBase.name=Generator Base
 
 item.ironHard.name=Hardened Iron
 
